Fixed alignment of contact boxes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a>projects</a>
         </div>
         
-        <div class="cont">
+        <div align="center" class="cont">
             <div class="contactMethod">
                 <h1>see my work on GitHub</h1>
                 <a href="https://github.com/MelGeorge" rel="noopener noreferrer" target="_blank">
