Updated about me, made alignment better in experience, education, contact tabs.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img class="image" src="images/portrait.png">
                     <div class="overlay">
                         <div class="text">
-                            I am a rising junior at the University of Michigan, where I study mathematics & computer science. I am currently a Software Engineering intern at CME Group, and eventually hope to become a Software Engineer, working on things that make a difference in people's lives through beautiful, elegant, well-thought-out algorithms.
+                            I am a rising junior at the University of Michigan, where I study mathematics & computer science. I am currently a Software Engineering intern at CME Group, and eventually I hope to become a Software Engineer, working on things that make a difference in people's lives through beautiful code and elegant algorithms.
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                     <img class="image" src="images/math-love.jpg">
                     <div class="overlay">
                         <div class="text">
-                            I love math! Specifically, I find combinatorics and graph theory very interesting to me. At UM, I am in the Mathematical Sciences Program, and am working on a concentration in Discrete & Algorithmic methods. This past school year, I've enjoyed serving as a math & computer science tutor for the university's Academic Success Program.
+                            I love math. Specifically, I find combinatorics and graph theory fascinating. At UM, I am in the Mathematical Sciences Program, and am working on a concentration in Discrete & Algorithmic methods. This past school year, I've enjoyed serving as a math & computer science tutor for the university's Academic Success Program.
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <img class="image" src="images/dinosaur.JPG">
                     <div class="overlay">
                         <div class="text">
-                            I love puzzles. Nothing is more exciting to me than visualizing, discussing, sketching, and banging my head up against a wall over an interesting problem. In my free time, find me making origami dinosaurs, playing with Rubik's cubes, obsessing over 2048, developing software to solve my sudoku for me, etc.
+                            I love puzzles. Nothing is more exciting to me than visualizing, discussing, sketching, and banging my head up against a wall over an interesting problem. In my free time, find me making origami dinosaurs, solving Rubik's cubes, obsessively playing 2048, writing programs to solve my sudoku for me, etc.
                         </div>
                     </div>
                 </div>
@@ -193,7 +193,7 @@
         
         <div align="center" class="proj">
             <div class="projectsHead">
-                Head over to GitHub to check out some of my personal projects!
+                Click the Octocat & head over to GitHub to check out some of my personal projects!
             </div>
             <div class="GitHubLinks">
                 <a href="https://github.com/MelGeorge" rel="noopener noreferrer" target="_blank"><img src="images/Octocat.png"></a>
