Added active container fades for mobile viewing, updated experience.

--- a/index.html
+++ b/index.html
@@ -77,9 +77,18 @@
                         </div>
                     </div>
                     <div class="expText">
-                        <p>
-                            Worked on an agile team to improve both the front and back ends of an application used by data scientists to query enormous databases.
-                        </p>
+                        <li>
+                            Collaborated with an Agile development team to transition legacy web application from GWT to AngularJS
+                        </li>
+                        <li>
+                            Optimized SQL queries to improve run times
+                        </li>
+                        <li>
+                            Debugged Java processes to correct user-reported errors
+                        </li>
+                        <li>
+                            Implemented improved error handling system in Javascript
+                        </li>
                     </div>
                 </div>
                 <div class="expUnit">
@@ -90,9 +99,12 @@
                         </div>
                     </div>
                     <div class="expText">
-                        <p>
-                            Helped students to develop their mathematical intuition & algorithmic thinking skills through demonstration & practice.
-                        </p>
+                        <li>
+                            Helped students to develop their mathematical intuition & algorithmic thinking skills
+                        </li>
+                        <li>
+                            Taught students to program, test, and debug in C++
+                        </li>
                     </div>
                 </div>
                 <div class="expUnit">
@@ -103,9 +115,12 @@
                         </div>
                     </div>
                     <div class="expText">
-                        <p>
-                            Performed troubleshooting of technical issues for engineering students & faculty. Learned myriad skills relating to scripting, system administration and hardware.
-                        </p>
+                        <li>
+                            Performed troubleshooting of technical issues for Electrical Engineering and Computer Science students and faculty
+                        </li>
+                        <li>
+                            Learned myriad skills relating to Bash scripting, system administration, and hardware
+                        </li>
                     </div>
                 </div>
                 <div class="expUnit">
@@ -116,9 +131,9 @@
                         </div>
                     </div>
                     <div class="expText">
-                        <p>
-                            Taught programming skills to high school students, created challenges for them to solve, and served as a mentor.Taught programming skills to high school students, created challenges for them to solve, and served as a mentor.
-                        </p>
+                        <li>
+                            Taught basic programming skills to high school students using Lego robots and a C-like programming language
+                        </li>
                     </div>
                 </div>
                 <div class="expUnit">
@@ -129,9 +144,9 @@
                         </div>
                     </div>
                     <div class="expText">
-                        <p>
-                            Studied the role of proteins in the human nervous system by performing experiments, collecting data, analyzing results, and presenting findings.
-                        </p>
+                        <li>
+                            Performed experiments, collected data, and analyzed results in order to study the role of proteins in the nervous system
+                        </li>
                     </div>
                 </div>
             </div>
