Added EECS 280 position, updated internship dates

--- a/index.html
+++ b/index.html
@@ -71,9 +71,25 @@
             <div class="dispBox">
                 <div class="expUnit">
                     <div class="expHeader">
+                        <img src="images/ia.png">
+                        <div class="subtitle">
+                            UM College of Engineering / September 2017 - Present
+                        </div>
+                    </div>
+                    <div class="expText">
+                        <li>
+                            Served as a teaching assistant for EECS 280 - Programming & Data Structures
+                        </li>
+                        <li>
+                            Taught a weekly lab section and held weekly office hours
+                        </li>
+                    </div>
+                </div>
+                <div class="expUnit">
+                    <div class="expHeader">
                         <img src="images/intern.png">
                         <div class="subtitle">
-                            CME Group / May 2015 - Present
+                            CME Group / May 2017 - August 2017
                         </div>
                     </div>
                     <div class="expText">
