--- a/index.html
+++ b/index.html
@@ -188,9 +188,12 @@
                         <p>
                             My computer science courses have included:
                             <ul>
+                                <li>EECS 398 - Computing for Computer Scientists</li>
+                                <li>EECS 376 - Foundations of Computer Science *</li>
+                                <li>EECS 370 - Intro to Computer Organization *</li>
                                 <li>EECS 281 - Data Structures & Algorithms</li>
                                 <li>EECS 280 - Programming & Data Structures</li>
-                                <li>EECS 398 - Computing for Computer Scientists</li>
+                                <li>EECS 203 - Discrete Math</li>
                                 <li>ENGR 101 - Intro to Computers & Programming</li>
                             </ul>
                         </p>
@@ -198,12 +201,14 @@
                             My mathematics courses have included:
                             <ul>
                                 <li>MATH 465 - Intro to Graph Theory & Combinatorics</li>
+                                <li>MATH 425 - Intro to Probability *</li>
                                 <li>MATH 351 - Principles of Analysis</li>
                                 <li>MATH 217 - Linear Algebra</li>
                                 <li>MATH 216 - Calc IV, Intro to Differential Equations</li>
                                 <li>MATH 215 - Calc III, Multivariable Calculus</li>
                                 <li>STATS 250 - Intro to Statistics</li>
                             </ul>
+                                    * = in progress
                         </p>
                         <p>
                             I also participated in the Undergraduate Research Opportunities Program during my freshman year, during which I worked in a lab in the UM Department of Molecular & Integrative Physiology and learned to perform experiments, collect data, and analyze results. Last year I worked for the University of Michigan's Academic Success Program, tutoring students in mathematics & computer science. For the past year, I have been a member of an organization called GEECS - Girls in Electrical Engineering & Computer Science. And periodically, I volunteer with UM's Women in Science & Engineering program to put on workshops for high school girls learning to code, or with FEMMES (Females Excelling More in Mathematics, Engineering, and Science), teaching elementary school girls that mathematics, science, and engineering can be exciting and fun.
