Updated about me

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <img class="image" src="images/portrait.png">
                         <div class="overlay">
                             <div class="text">
-                                I am a rising junior at the University of Michigan, where I study mathematics & computer science. I am currently a Software Engineering intern at CME Group, and eventually I hope to become a Software Engineer, working on things that make a difference in people's lives through beautiful code and elegant algorithms.
+                                I am a rising junior at the University of Michigan, where I study mathematics & computer science. This summer, I was a Software Engineering intern at CME Group, and eventually I hope to become a Software Engineer, working on things that make a difference in people's lives through beautiful code and elegant algorithms.
                             </div>
                         </div>
                     </div>
