Updated for fall 2018

--- a/index.html
+++ b/index.html
@@ -45,24 +45,37 @@
             <div class="dispBox">
                 <div class="expUnit">
                     <div class="expHeader">
+                       <div class="expTitle">
+                        Software Engineering Intern
+                       </div>
                         <div class="subtitle">
                             CME Group / May 2018 - Present
                         </div>
                     </div>
                     <div class="expText">
                         <li>
-                            Worked on the Identity and Access Management team, learning about the security principles involved and the enterprise applications used to manage identity and protect information
+                            Worked on the Identity and Access Management team, learning about the security principles
+involved and the enterprise applications used to manage identity and protect information
                         </li>
                         <li>
-                            Wrote PowerShell scripts for disabling dormant accounts and creating and updating groups in Active Directory and in eDirectory
+                            Wrote PowerShell scripts for disabling dormant accounts and creating and updating groups in Active Directory and in eDirectory; these scripts helped to identify thousands of dormant accounts and to create hundreds of groups
                         </li>
                         <li>
                             Built a SailPoint workflow for guiding new employees in requesting access to applications using BeanShell
+                        </li>
+                        <li>
+                            Updated the webpage displayed when users are prompted to authenticate via Duo 2FA using HTML & CSS
+                        </li>
+                        <li>
+                            Developed PowerShell scripts to add application IDs, create safes, modify safes, etc. in CyberArk via the CyberArk REST API
                         </li>
                     </div>
                 </div>
                 <div class="expUnit">
                     <div class="expHeader">
+                        <div class="expTitle">
+                           Instructional Aide
+                        </div>
                         <div class="subtitle">
                             UM College of Engineering / September 2017 - April 218
                         </div>
@@ -72,18 +85,27 @@
                             Served as a teaching assistant for EECS 280 - Programming & Data Structures
                         </li>
                         <li>
-                            Taught a weekly lab section, held office hours, helped to write and grade exams
+                            Taught/ reinforced concepts from lecture including C and C++ style abstract data types, inheritance, polymorphism, arrays, linked lists, binary search trees, recursion, and exceptions
                         </li>
                         <li>
-                            Reinforced concepts from lecture including C and C++ style abstract data types, inheritance, polymorphism, arrays, linked lists, binary search trees, recursion, and exceptions
+                            Helped students learn necessary tools, skills, and strategies for debugging their own projects
                         </li>
                         <li>
                             Demonstrated the use of software development tools like Git, gdb, Make, Valgrind, and IDEs
+                        </li>
+                        <li>
+                            Led a weekly lab section, held office hours, and helped to write and grade exams
+                        </li>
+                        <li>
+                            Served as the social chair-- planned social events for staff throughout the semester
                         </li>
                     </div>
                 </div>
                 <div class="expUnit">
                     <div class="expHeader">
+                        <div class="expTitle">
+                           Software Engineering Intern
+                        </div>
                         <div class="subtitle">
                             CME Group / May 2017 - August 2017
                         </div>
@@ -93,33 +115,45 @@
                             Collaborated with an Agile development team to transition legacy web application from GWT to AngularJS
                         </li>
                         <li>
-                            Improved previously implemented error-handling methods in JavaScript
+                            Improved error-handling methods in JavaScript
                         </li>
                         <li>
-                            Debugged Java processes to correct user-reported errors
+                            Debugged production Java code to correct errors
                         </li>
                         <li>
-                            Write SQL queries for data scientists
+                            Constructed complex SQL queries
                         </li>
                     </div>
                 </div>
                 <div class="expUnit">
                     <div class="expHeader">
+                        <div class="expTitle">
+                            Math and Computer Science Tutor
+                        </div>
                         <div class="subtitle">
                             UM Academic Success Program / September 2016 - April 2017
                         </div>
                     </div>
                     <div class="expText">
                         <li>
-                            Helped students to develop their mathematical intuition & algorithmic thinking skills
+                            Worked for the UM Academic Success program tutoring student-athletes
                         </li>
                         <li>
-                            Taught students to program, test, and debug in MATLAB and C++
+                            Demonstrated problem-solving strategies for students in introductory calculus, linear algebra, discrete mathematics, and introductory programming courses
+                        </li>
+                        <li>
+                            Helped students to develop their mathematical intuition and algorithmic thinking skills
+                        </li>
+                        <li>
+                            Taught students to program, test, and debug simple programs in MatLab & C++
                         </li>
                     </div>
                 </div>
                 <div class="expUnit">
                     <div class="expHeader">
+                        <div class="expTitle">
+                            Computer Consultant
+                        </div>
                         <div class="subtitle">
                             UM Departmental Computing Organization / July 2016 - August 2016
                         </div>
@@ -129,12 +163,15 @@
                             Performed troubleshooting of technical issues for Electrical Engineering and Computer Science students and faculty
                         </li>
                         <li>
-                            Learned myriad skills relating to Bash scripting, system administration, and hardware
+                            Learned myriad skills relating to system administration and hardware
                         </li>
                     </div>
                 </div>
                 <div class="expUnit">
                     <div class="expHeader">
+                        <div class="expTitle">
+                            Robotics Instructor/ Student Leader
+                        </div>
                         <div class="subtitle">
                             UM Women in Science in Engineering / June 2016 - July 2016
                         </div>
@@ -147,6 +184,9 @@
                 </div>
                 <div class="expUnit">
                     <div class="expHeader">
+                        <div class="expTitle">
+                           Undergraduate Research Assistant
+                        </div>
                         <div class="subtitle">
                             UM Department of Molecular & Integrative Physiology / October 2015 - April 2016
                         </div>
@@ -172,7 +212,7 @@
                             I am currently working towards a B.S. in Computer Science and Mathematics at the University of Michigan, Ann Arbor. In Computer Science, I am concentrating in Security and in Software Systems. My declared mathematics program is the Mathematical Sciences Program, through which I am concentrating in Discrete & Algorithmic methods. I am a rising senior in the College of Literature, Science, & the Arts, and I plan to graduate in May 2019.
                         </p>
                         <p>
-                            I have a cumulative 3.835 / 4.000 grade point average, and I have been awarded University Honors every semester. I was named a James B. Angell Scholar in March 2018 for achieving all A grades for two consecutive semesters. I received the University of Michigan Board of Regents scholarship January 2015. I have also received the General Motors Endowed Scholarship for last two school years.
+                            I have a cumulative 3.835 / 4.000 grade point average, and I have been awarded University Honors every semester. I was named a James B. Angell Scholar in March 2018 for achieving all A grades for two consecutive semesters. I received the University of Michigan Board of Regents scholarship January 2015. I have also received the General Motors Endowed Scholarship for the last two school years.
                         </p>
                         <p>
                             While at Michigan, I have tried to take a rigorous and well-rounded courseload.
@@ -180,6 +220,8 @@
                         <p>
                             My computer science courses have included:
                             <ul>
+                                <li>EECS 489 - Networks (currently enrolled)</li>
+                                <li>EECS 445 - Intro to Machine Learning (currently enrolled)</li>
                                 <li>EECS 482 - Operating Systems</li>
                                 <li>EECS 475 - Intro to Cryptography</li>
                                 <li>EECS 388 - Intro to Computer Security</li>
@@ -195,6 +237,7 @@
                         <p>
                             My mathematics courses have included:
                             <ul>
+                                <li>MATH 312 - Applied Modern Algebra (currently enrolled)</li>
                                 <li>MATH 465 - Intro to Graph Theory & Combinatorics</li>
                                 <li>MATH 425 - Intro to Probability</li>
                                 <li>MATH 351 - Principles of Analysis</li>
